--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,24 +1,209 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HWx-kr-xB6">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--RecordVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordVC" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6FS-bu-xJB">
+                                <rect key="frame" x="112.5" y="258.5" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="CGs-uN-vuX"/>
+                                    <constraint firstAttribute="height" constant="150" id="K0v-eQ-ZR6"/>
+                                </constraints>
+                                <state key="normal" image="Record"/>
+                                <connections>
+                                    <action selector="recordButtonWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RAR-Bg-1d4"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0HH-Z9-0Ra">
+                                <rect key="frame" x="162.5" y="597" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Wsh-m5-9MP"/>
+                                    <constraint firstAttribute="height" constant="50" id="kn7-Q8-b6k"/>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tIX-uo-CDY"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJq-7z-JOP">
+                                <rect key="frame" x="117" y="416.5" width="141" height="21"/>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.015686274510000001" green="0.6705882353" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="6FS-bu-xJB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Fpp-xV-dgF"/>
+                            <constraint firstItem="6FS-bu-xJB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RDi-tU-ojj"/>
+                            <constraint firstItem="uJq-7z-JOP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vxc-RK-V6k"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0HH-Z9-0Ra" secondAttribute="bottom" constant="20" id="nto-zO-Vml"/>
+                            <constraint firstItem="uJq-7z-JOP" firstAttribute="top" secondItem="6FS-bu-xJB" secondAttribute="bottom" constant="8" symbolic="YES" id="sn6-ZY-Qfw"/>
+                            <constraint firstItem="0HH-Z9-0Ra" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uIg-v0-4hE"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="GJS-fR-124"/>
+                    <connections>
+                        <outlet property="recordButton" destination="6FS-bu-xJB" id="GMQ-Ie-qXg"/>
+                        <outlet property="recordLabel" destination="uJq-7z-JOP" id="ecv-Ag-ZAs"/>
+                        <outlet property="stopButton" destination="0HH-Z9-0Ra" id="LKd-tS-UA2"/>
+                        <segue destination="xm8-qY-Y5y" kind="show" identifier="stopRecording" id="y12-Co-7Fr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="476" y="132.68365817091455"/>
+        </scene>
+        <!--Play RecordingVC-->
+        <scene sceneID="QnO-VR-BLz">
+            <objects>
+                <viewController id="xm8-qY-Y5y" customClass="PlayRecordingVC" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gUO-lw-bnl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hwi-io-KpE">
+                                <rect key="frame" x="0.0" y="64" width="375" height="537"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="exZ-cI-ahP">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="179"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qPG-Ko-lG2" userLabel="Slow Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="179"/>
+                                                <state key="normal" image="Slow"/>
+                                                <connections>
+                                                    <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="XMn-JP-4TD"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zq9-EL-WYt" userLabel="Fast Button">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="179"/>
+                                                <state key="normal" image="Fast"/>
+                                                <connections>
+                                                    <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="z1W-78-OrD"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Zi6-0v-6Ot">
+                                        <rect key="frame" x="0.0" y="179" width="375" height="179"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WoB-jk-MZQ" userLabel="High Pitch Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="179"/>
+                                                <state key="normal" image="HighPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="t7a-zY-Whm"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ARt-0A-fNo" userLabel="Low Pitch Button">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="179"/>
+                                                <state key="normal" image="LowPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="aRt-gn-8fK"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="zub-Yp-dWP">
+                                        <rect key="frame" x="0.0" y="358" width="375" height="179"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vkc-Qd-AVW" userLabel="Echo Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="179"/>
+                                                <state key="normal" image="Echo"/>
+                                                <connections>
+                                                    <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="qRC-Ob-HIu"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sP0-gf-efT" userLabel="Reverb Button">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="179"/>
+                                                <state key="normal" image="Reverb"/>
+                                                <connections>
+                                                    <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="IeT-ix-06r"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Tm-de-0eL">
+                                <rect key="frame" x="162.5" y="601" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="lNX-2M-foH"/>
+                                    <constraint firstAttribute="height" constant="50" id="zRe-1e-bKz"/>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="Gxy-4v-Tbm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97647058819999999" green="0.30588235289999999" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="3Tm-de-0eL" firstAttribute="centerX" secondItem="gUO-lw-bnl" secondAttribute="centerX" id="2KS-aj-gUl"/>
+                            <constraint firstItem="C2z-kF-UY2" firstAttribute="trailing" secondItem="hwi-io-KpE" secondAttribute="trailing" id="W9t-aG-2w2"/>
+                            <constraint firstItem="hwi-io-KpE" firstAttribute="top" secondItem="C2z-kF-UY2" secondAttribute="top" id="e0O-lD-HDK"/>
+                            <constraint firstItem="3Tm-de-0eL" firstAttribute="top" secondItem="hwi-io-KpE" secondAttribute="bottom" id="sgq-4q-ojU"/>
+                            <constraint firstItem="C2z-kF-UY2" firstAttribute="bottom" secondItem="3Tm-de-0eL" secondAttribute="bottom" constant="16" id="wA4-aF-Yoa"/>
+                            <constraint firstItem="hwi-io-KpE" firstAttribute="leading" secondItem="C2z-kF-UY2" secondAttribute="leading" id="xkh-m5-4KI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="C2z-kF-UY2"/>
+                    </view>
+                    <connections>
+                        <outlet property="chipmunkButton" destination="WoB-jk-MZQ" id="QUb-bH-Obg"/>
+                        <outlet property="echoButton" destination="Vkc-Qd-AVW" id="7kF-ig-7kO"/>
+                        <outlet property="rabbitButton" destination="Zq9-EL-WYt" id="sgO-1d-9J4"/>
+                        <outlet property="reverbButton" destination="sP0-gf-efT" id="0ep-Oo-msI"/>
+                        <outlet property="snailButton" destination="qPG-Ko-lG2" id="owh-Ug-sBC"/>
+                        <outlet property="stopButton" destination="3Tm-de-0eL" id="v9d-Ke-VdF"/>
+                        <outlet property="vaderButton" destination="ARt-0A-fNo" id="SP7-Ca-5P8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E7s-Xt-H0Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1294" y="133"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Gyo-Cx-zor">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HWx-kr-xB6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WqA-Sm-3wh">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="oZe-8b-jUm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3W4-5i-2cU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-275" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Echo" width="90" height="90"/>
+        <image name="Fast" width="90" height="90"/>
+        <image name="HighPitch" width="90" height="90"/>
+        <image name="LowPitch" width="90" height="90"/>
+        <image name="Record" width="155" height="155"/>
+        <image name="Reverb" width="90" height="90"/>
+        <image name="Slow" width="90" height="90"/>
+        <image name="Stop" width="155" height="155"/>
+    </resources>
 </document>
