--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HWx-kr-xB6">
-    <device id="retina5_5" orientation="portrait">
+    <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="RecordVC" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6FS-bu-xJB">
-                                <rect key="frame" x="132" y="293" width="150" height="150"/>
+                                <rect key="frame" x="437" y="309" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="CGs-uN-vuX"/>
                                     <constraint firstAttribute="height" constant="150" id="K0v-eQ-ZR6"/>
@@ -30,7 +30,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0HH-Z9-0Ra">
-                                <rect key="frame" x="182" y="666" width="50" height="50"/>
+                                <rect key="frame" x="487" y="698" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="Wsh-m5-9MP"/>
                                     <constraint firstAttribute="height" constant="50" id="kn7-Q8-b6k"/>
@@ -41,7 +41,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJq-7z-JOP">
-                                <rect key="frame" x="136.66666666666666" y="451" width="140.99999999999997" height="21"/>
+                                <rect key="frame" x="441.5" y="467" width="141" height="21"/>
                                 <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -75,24 +75,24 @@
             <objects>
                 <viewController id="xm8-qY-Y5y" customClass="PlayRecordingVC" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gUO-lw-bnl">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hwi-io-KpE">
-                                <rect key="frame" x="0.0" y="64" width="414" height="606"/>
+                                <rect key="frame" x="0.0" y="64" width="1024" height="638"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="exZ-cI-ahP">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="202"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="212.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qPG-Ko-lG2" userLabel="Slow Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="202"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="512" height="212.5"/>
                                                 <state key="normal" image="Slow"/>
                                                 <connections>
                                                     <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="XMn-JP-4TD"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zq9-EL-WYt" userLabel="Fast Button">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="202"/>
+                                                <rect key="frame" x="512" y="0.0" width="512" height="212.5"/>
                                                 <state key="normal" image="Fast"/>
                                                 <connections>
                                                     <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="z1W-78-OrD"/>
@@ -101,17 +101,17 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Zi6-0v-6Ot">
-                                        <rect key="frame" x="0.0" y="202" width="414" height="202"/>
+                                        <rect key="frame" x="0.0" y="212.5" width="1024" height="213"/>
                                         <subviews>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WoB-jk-MZQ" userLabel="High Pitch Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="202"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="512" height="213"/>
                                                 <state key="normal" image="HighPitch"/>
                                                 <connections>
                                                     <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="t7a-zY-Whm"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ARt-0A-fNo" userLabel="Low Pitch Button">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="202"/>
+                                                <rect key="frame" x="512" y="0.0" width="512" height="213"/>
                                                 <state key="normal" image="LowPitch"/>
                                                 <connections>
                                                     <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="aRt-gn-8fK"/>
@@ -120,17 +120,17 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="zub-Yp-dWP">
-                                        <rect key="frame" x="0.0" y="404" width="414" height="202"/>
+                                        <rect key="frame" x="0.0" y="425.5" width="1024" height="212.5"/>
                                         <subviews>
                                             <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vkc-Qd-AVW" userLabel="Echo Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="202"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="512" height="212.5"/>
                                                 <state key="normal" image="Echo"/>
                                                 <connections>
                                                     <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="qRC-Ob-HIu"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sP0-gf-efT" userLabel="Reverb Button">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="202"/>
+                                                <rect key="frame" x="512" y="0.0" width="512" height="212.5"/>
                                                 <state key="normal" image="Reverb"/>
                                                 <connections>
                                                     <action selector="playSoundForButtonWasPressed:" destination="xm8-qY-Y5y" eventType="touchUpInside" id="IeT-ix-06r"/>
@@ -141,7 +141,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Tm-de-0eL">
-                                <rect key="frame" x="182" y="670" width="50" height="50"/>
+                                <rect key="frame" x="487" y="702" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="lNX-2M-foH"/>
                                     <constraint firstAttribute="height" constant="50" id="zRe-1e-bKz"/>
@@ -183,7 +183,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HWx-kr-xB6" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WqA-Sm-3wh">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
